--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to cPanel
 on:
   push:
     branches:
-      - main # Change to match your branch
+      - main # Change this if your branch is different
 
 jobs:
   deploy:
@@ -13,10 +13,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4
+        uses: SamKirkland/FTP-Deploy-Action@4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./ # Change if needed
-          server-dir: /public_html/ # Change if your site is in a subfolder
+          local-dir: ./ # Adjust if necessary
+          server-dir: /public_html/ # Adjust if your site is in a subfolder
